# sparkd

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
docs/images/: README.md  _make_placeholders.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
sparkd/: __main__.py  app.py  cli.py  config.py  errors.py  hardware.py  logging.py  paths.py  secrets.py
sparkd/advisor/: __init__.py  anthropic_adapter.py  openai_compat.py  prompts.py  providers.py  tool_calls.py
sparkd/db/: __init__.py  engine.py  models.py
sparkd/routes/: advisor.py  boxes.py  clusters.py  hf.py  jobs.py  launches.py  mods.py  recipes.py  status.py  ws.py
sparkd/schemas/: __init__.py  advisor.py  box.py  hf.py  job.py  launch.py  mod.py  recipe.py  upstream.py
sparkd/services/: advisor.py  advisor_config.py  box.py  cluster.py  hf_catalog.py  jobs.py  launch.py  library.py  mod.py  recipe.py  status.py  targets.py  upstream.py  versions.py
sparkd/ssh/: __init__.py  discovery.py  pool.py
tests/: conftest.py  ssh_fakes.py
tests/integration/: test_advisor_config_routes.py  test_advisor_routes.py  test_advisor_service.py  test_advisor_setup.py  test_box_routes.py  test_box_service.py  test_clusters_routes.py  test_discovery_route.py  test_fleet_status_route.py  test_full_stack_ai.py  test_healthz.py  test_hf_routes.py  test_launch_actions.py  test_launch_reconcile.py  test_launch_routes.py  test_launch_service.py  test_mod_routes.py  test_recipe_raw_routes.py  test_recipe_routes.py  test_recipe_service.py  (+6 more)
(+90 files in other folders)
