[project]
name = "sparkd"
version = "0.0.1"
description = "Dashboard for DGX Spark vLLM workloads"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "asyncssh>=2.18",
  "sqlalchemy[asyncio]>=2.0",
  "aiosqlite>=0.20",
  "alembic>=1.13",
  "click>=8.1",
  "structlog>=24.4",
  "keyring>=25.4",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "anthropic>=0.39",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "respx>=0.21",
]

[project.scripts]
sparkd = "sparkd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sparkd"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = ["e2e: requires a real DGX Spark box (set SPARKD_E2E_BOX)"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
